--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,4 +13,5 @@
 @import "pages/portfolio";
 
 
-@import "layout/media_query.scss";
+@import "layout/home_mq.scss";
+@import "layout/contact_mq.scss";
