--- a/assets/sass/pages/about.scss
+++ b/assets/sass/pages/about.scss
@@ -28,7 +28,8 @@
 .about-page-content {
     background-color: #fff;
     padding: 3.5rem 2.5rem;
-    margin: 2rem 0 0 -5rem;
+    margin: 2rem 0 0 -9rem;
+    border: 1px solid #e1e1e1;
 }
 
 .About_text {
@@ -291,6 +292,6 @@
 
 }
 
-.left-30 {
+.inc-isb {
     left: 30px!important;
 }
