--- a/assets/sass/pages/portfolio.scss
+++ b/assets/sass/pages/portfolio.scss
@@ -1,4 +1,12 @@
 
+.prod-img {
+    position: relative;
+    background-position: center center;
+    background-size: cover;
+    width: 100%;
+    height: 511px;
+}
+
 section#ict-app{
     & .contant-text {
         padding-top: 30px;
@@ -7,8 +15,11 @@ section#ict-app{
     & img {
         margin: 0 auto;
     }
+    & .ict-image{
+            background-image: url('../images/projects/ict.jpg');
+    }
 }
-section#mis{
+section#SADM{
     & .contant-text {
         padding-top: 40px;
         padding-left: 20px;
@@ -16,6 +27,22 @@ section#mis{
     & img {
         margin: 0 auto;
     }
+        & .ict-image{
+            background-image: url('../images/projects/2.jpg');
+    }
+
+}
+section#mis{
+    & .contant-text {
+        padding-left: 20px;
+    }
+    & img {
+        margin: 0 auto;
+    }
+    & .ict-image{
+            background-image: url('../images/projects/accounting-alone-application-938965.jpg');
+    }
+
 }
 section#gis{
     & .contant-text {
@@ -25,6 +52,10 @@ section#gis{
     & img {
         margin: 0 auto;
     }
+    & .ict-image{
+            background-image: url('../images/projects/accounting-alone-application-938965.jpg');
+    }
+
 }
 section#mae{
     & .contant-text {
@@ -34,7 +65,12 @@ section#mae{
     & img {
         margin: 0 auto;
     }
+    & .ict-image{
+            background-image: url('../images/projects/accounting-alone-application-938965.jpg');
+    }
 }
+
+
 .project {
     margin-right: 0px;
     &__text {
@@ -83,21 +119,4 @@ section#mae{
             }
         }
     }
-}
-
-.prod-img {
-    position: relative;
-    background-position: center center;
-    background-size: cover;
-    width: 100%;
-    height: 511px;
-
-}
-
-.mis-image {
-    background-image: url('../images/projects/accounting-alone-application-938965.jpg');
-}
-
-.ict-image {
-    background-image: url('../images/projects/accounting-alone-application-938965.jpg');
 }
