--- a/assets/sass/components/prework.scss
+++ b/assets/sass/components/prework.scss
@@ -43,6 +43,7 @@ a { color: #f83939; }
 caption { padding-top: 8px; padding-bottom: 8px; color: #333; text-align: left; font-size: 18px; }
 .p-l-15 { padding-left: 15px !important; }
 .p-r-15 { padding-right: 15px !important; }
+.p-l-r-10 { padding: 0 10px !important; }
 .p-b-15 { padding-bottom: 15px !important; }
 .p-t-15 { padding-top: 15px !important; }
 .p-r-0 { padding-right: 0px !important; }
@@ -68,6 +69,7 @@ caption { padding-top: 8px; padding-bottom: 8px; color: #333; text-align: left; 
 .p-b-large{padding-bottom: 90px;}
 .p-large{padding : 9rem 0px;}
 .bg-primary{background-color: #f49818!important;}
+.bgc-prime{background-color: #f49818!important;}
 .bg-primary-light{background-color: #f49818!important;}
 .bg-secondary{background-color: #51b8e3!important;}
 .bg-secondary-light{background-color: #2998ff!important;}
