--- a/assets/sass/pages/services.scss
+++ b/assets/sass/pages/services.scss
@@ -1,4 +1,3 @@
-
 //---------------------------------pages_banner
 .frame-slider > h2 {
     text-align: center;
@@ -22,6 +21,7 @@
         bottom: 21%;
     }
 }
+
 //----------------------------------text courasol-with image
 .s-content {
     background-image: url('../images/services.jpeg');
@@ -177,6 +177,7 @@
             padding: 0 20px 0 0;
             font-size: 35px;
             line-height: 100px;
+            color: $color-white;
         }
         & p {
             line-height: 100px;
@@ -293,104 +294,89 @@
 }
 
 //-----------------------------all services
-.tech-services {
-    position: relative;
-}
-
 .tech-heading {
-    margin: 0 0 20px 20px;
-    &::before {
-        background-color: $color-secondary-light;
-
+    margin: 0 0 30px 20px;
+    color: $color-secondary-light;
+    &::after {
+        background-color: violet;
         position: absolute;
         content: ' ';
         top: -3px;
+        z-index: 1000;
         border-radius: 3px;
         left: 0;
         width: 3px;
         height: 30px;
     }
-
 }
 
-.tech-box {
-    background-repeat: no-repeat;
-    background-position: center right;
-    background-size: cover;
-    height: 350px;
-    border-radius: 5px;
-    width: 270px;
-}
+//----------our services
+.our-services {
+    //    overflow: hidden;
+    z-index: 1000;
+    transition: all .3s ease-out;
 
 
-.tech-section {
-    @include flexbox;
-    @include justify-content(space-between);
-    & p {
-        position: absolute;
-        font-size: 24px;
-        z-index: 999;
-        margin-right: 10PX;
-        margin-bottom: 20px;
-        font-weight: 300;
-        color: #fff;
-        top: 280px;
-    }
+    &__img {
 
-    &-item {
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        border-radius: 5px;
+        transition: all .3s ease-out;
         &-1 {
-            background-image: url('../images/services.jpeg');
-            position: relative;
+            background-image: url('../images/write-593333_1920.jpg');
         }
         &-2 {
             background-image: url('../images/services.jpeg');
-            position: relative;
-
-
         }
         &-3 {
-            background-image: url('../images/services.jpeg');
-            position: relative;
-
-
+            background-image: url('../images/services2.jpeg');
         }
         &-4 {
-            background-image: url('../images/services.jpeg');
-            position: relative;
-
+            background-image: url('../images/cover.jpg');
         }
+        &:hover {
+            transform: scale(1.1);
+            border-radius: 5px;
+        }
+
     }
-    .tech-section-item-1::after,
-    .tech-section-item-2::after,
-    .tech-section-item-3::after,
-    .tech-section-item-4::after {
+    & .texxt {}
+    & h3 {
         position: absolute;
-        content: '';
-        width: 270px;
-        height: 350px;
-        border-radius: 5px;
-        background-color: rgba(0, 0, 0, 0.4);
-        top: 0;
-        left: 0;
-
-        /* Black background with opacity */
-        z-index: 2;
+        top: 270px;
+        z-index: 999;
+        left: 8%;
+        transition: all .3s ease-out;
+        transition-delay: 0.4s;
+        font-weight: 300;
+        letter-spacing: 0px;
+        color: #fff;
+        font-size: 24px;
+        transition: all .3s ease-out;
     }
+    //    &:hover h3 {
+    //        transform: translateY(-150px);
+    //
+    //    }
+    //        &:hover p {
+    //        transform: translateY(-150px);
+    //        opacity: 1;
+    //    }
+    //    & p{
+    //        opacity: 0;
+    //         transform: translateY(150px);
+    //    }
+}
 
-    .tech-section-item-1::before,
-    .tech-section-item-2::before,
-    .tech-section-item-3::before,
-    .tech-section-item-4::before {
-        position: absolute;
-        content: '';
-        width: 270px;
-        height: 350px;
-        top: 0;
-        border-radius: 5px;
-        left: 0;
-        background: linear-gradient(to bottom, rgba($color-secondary-light, 0), rgba($color-secondary-light, 1));
-        z-index: 2;
-    }
-
-
+.light-blue-overlay {
+    position: relative;
+    content: '';
+    height: 350px;
+    top: 0;
+    border-radius: 5px;
+    left: 0;
+    background: linear-gradient(to bottom, rgba($color-secondary-light, 0), rgba($color-secondary-light, 1));
+    z-index: 2;
 }
